--- a/Phaser Introductie/index.html
+++ b/Phaser Introductie/index.html
@@ -5,10 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Game title here</title>
-    <script src="js/phaser.min.js"></script>
-    <script src="js/main.js"></script>
-    <script src="js/sceneMain.js"></script>
-    <script src="js/fontLoader.js"></script>
+    <script src="Banana%20Game/js/phaser.min.js"></script>
+    <script src="Banana%20Game/js/main.js"></script>
+    <script src="Banana%20Game/js/sceneMain.js"></script>
+    <script src="Banana%20Game/js/fontLoader.js"></script>
 </head>
 <body>
 
