--- a/Tutorial Phaser/Tutorial/part1.html
+++ b/Tutorial Phaser/Tutorial/part1.html
@@ -27,8 +27,15 @@
 
     var game = new Phaser.Game(config);
 
-    function preload ()
-    {
+    function preload () {
+        this.load.image('sky', 'assets/sky.png');
+        this.load.image('ground', 'assets/platform.png');
+        this.load.image('star', 'assets/star.png');
+        this.load.image('bomb', 'assets/bomb.png');
+        this.load.spritesheet('dude', 'assets/dude.png', {
+            frameWidth: 32,
+            frameHeight: 32
+        });
     }
 
     function create ()
