--- a/Tutorial Phaser/Tutorial/part2.html
+++ b/Tutorial Phaser/Tutorial/part2.html
@@ -38,12 +38,10 @@
         });
     }
 
-    function create ()
-    {
+    function create () {
     }
 
-    function update ()
-    {
+    function update () {
     }
 
 </script>
